--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,24 @@
+/* @font-face {
+  font-family: 'Ramche';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/Ramche.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+} */
+@font-face {
+  font-family: 'DOSSaemmul';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/DOSSaemmul.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body{
   margin:0;
   padding:0;
+  font-family: 'DOSSaemmul', sans-serif;
 }
 
 #root{
   width: 100vw;
   height: 100vh;
   background-color: #ffffff;
-}
-
-.App{
-  font-family: 'DOSSaemmul','SUITE-Regular';
 }
